--- a/index.html
+++ b/index.html
@@ -8,17 +8,17 @@
     <link rel="stylesheet" href="style.css">
     <title>Unit Converter</title>
 </head>
-<body>
+<body style="background-color:rgba(232, 224, 224, 0.922);">
     <div class="container">
         <h1 class="text-center mb-4">Unit Converter</h1>
         Enter compound mol wt ->
-        <input type="number" id="molwtin" placeholder="Enter Mol wt value here...">
+        <input  type="number" id="molwtin" placeholder="Enter Mol wt value here...">
 
         <div class="input-group mb-3">
             <input type="number" class="form-control" id="input" name="input" placeholder="Enter value here...">
             <div class="input-group-append">
                 <select class="btn btn-light" name="unit" id="unit">
-                    <optgroup label="Productivity">
+                    <optgroup style="background-color:rgb(226, 223, 223);" label="Productivity">
                          <option>Mole-product/ Gram-catalyst/ Sec</option>
                         <option>Mole-product/ Kg-catalyst/ Sec </option>
                         <option>Gram-product/ Gram-catalyst/ Sec</option>
@@ -29,22 +29,22 @@
         </div>
         <section id="output">
             <!-- Gram -->
-            <div class="card bg-primary mb-3">
-                <div class="card-header" id="card-1">
+            <div  class="card bg-primary mb-3">
+                <div class="card-header" style="background-color:red;" id="card-1">
                     <h4></h4>
                     <div></div>
                 </div>
             </div>
             <!-- Kilogram -->
             <div class="card bg-success mb-3">
-                <div class="card-header" id="card-2">
+                <div class="card-header" style="background-color:rgb(221, 64, 61 );" id="card-2">
                     <h4></h4>
                     <div></div>
                 </div>
             </div>
             <!-- Ounce -->
             <div class="card bg-danger">
-                <div class="card-header" id="card-3">
+                <div class="card-header" style="background-color:rgb(214, 108, 106);" id="card-3">
                     <h4></h4>
                     <div></div>
                 </div>
